// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepWidget tests renders ServiceStep for Input sets 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  >
    <p
      class="StyledProps--font StyledProps--main"
      style="font-size: 16px; color: black; margin-top: 15px; font-weight: bold;"
    >
      Sidecar Artifact
    </p>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main"
        style="font-size: 16px; color: black; margin-top: 15px;"
      >
        sidecar1
      </p>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="imagePath"
        >
          Image Path
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                name="imagePath"
                style="width: 400px;"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
      style="font-size: 16px; color: black; margin-top: 15px; font-weight: bold;"
    >
      Manifests
    </p>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main"
        style="font-size: 16px; color: black; margin-top: 15px;"
      >
        gitId
      </p>
       
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="branch"
        >
          Branch
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                name="branch"
                style="width: 400px;"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StepWidget tests renders ServiceStep for Service Tab  1`] = `
<div>
  <div
    class="bp3-tabs Tabs--main"
  >
    <div
      class="bp3-tab-list"
      role="tablist"
    >
      <div
        class="bp3-tab-indicator-wrapper"
        style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
      >
        <div
          class="bp3-tab-indicator"
        />
      </div>
      <div
        aria-controls="bp3-tab-panel_serviceSpecifications_Artifacts"
        aria-disabled="false"
        aria-expanded="true"
        aria-selected="true"
        class="bp3-tab"
        data-tab-id="Artifacts"
        id="bp3-tab-title_serviceSpecifications_Artifacts"
        role="tab"
        tabindex="0"
      >
        Artifacts
      </div>
      <div
        aria-controls="bp3-tab-panel_serviceSpecifications_Manifests"
        aria-disabled="false"
        aria-expanded="false"
        aria-selected="false"
        class="bp3-tab"
        data-tab-id="Manifests"
        id="bp3-tab-title_serviceSpecifications_Manifests"
        role="tab"
        tabindex="0"
      >
        Manifests
      </div>
      <div
        aria-controls="bp3-tab-panel_serviceSpecifications_Variables"
        aria-disabled="false"
        aria-expanded="false"
        aria-selected="false"
        class="bp3-tab"
        data-tab-id="Variables"
        id="bp3-tab-title_serviceSpecifications_Variables"
        role="tab"
        tabindex="0"
      >
        Variables
      </div>
    </div>
    <div
      aria-hidden="false"
      aria-labelledby="bp3-tab-title_serviceSpecifications_Artifacts"
      class="bp3-tab-panel"
      id="bp3-tab-panel_serviceSpecifications_Artifacts"
      role="tabpanel"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-large"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="line-height: 24px;"
        >
          Specify the locations of the artifacts for this service. Harness will fetch the artifacts at the time of deployments. For every pipeline execution, you will specify the build/tag that you want to deploy. Leave the artifacts section empty if your artifactsd are referenced in the manifest files.
        </p>
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <section />
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main rowItem"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              + Add Primary Artifact
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main rowItem"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              + Add Sidecar
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StepWidget tests shows add artifact modal: Artifact Details Step 1`] = `
<div
  class="bp3-dialog modal bp3-dialog"
  style="width: 1000px; height: 580px; padding-bottom: 0px; position: relative;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    />
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <section
    class="wrapper"
  >
    <div
      class="StepWizard--main StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            CONNECTOR DETAILS
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            2
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            AUTHENTICATION
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            3
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            VERIFY CONNECTION
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            4
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            ARTIFACT SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical StyledProps--main StyledProps--margin-small"
          style="height: inherit;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
          >
            Docker Registry Details
          </p>
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="Layout--vertical StyledProps--main secondStep StyledProps--padding-top-large StyledProps--padding-bottom-large"
                >
                  <div
                    class="bp3-form-group"
                    data-id="dockerRegistryUrl-0"
                  >
                    <label
                      class="bp3-label"
                      for="dockerRegistryUrl"
                    >
                      Docker Registry URL
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="dockerRegistryUrl"
                          placeholder="URL"
                          type="text"
                          value="https://hub.docker.com"
                        />
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Provider Type
                  </p>
                  <div
                    class="bp3-form-group bp3-inline dockerProviderType"
                    data-id="dockerProviderType-1"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            checked=""
                            name="dockerProviderType"
                            type="radio"
                            value="DockerHub"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          DockerHub
                        </label>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            name="dockerProviderType"
                            type="radio"
                            value="Harbor"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Harbour
                        </label>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            name="dockerProviderType"
                            type="radio"
                            value="Quay"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Quay
                        </label>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            name="dockerProviderType"
                            type="radio"
                            value="Other"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Other (Docker V2 compliant)
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main authHeaderRow"
                  >
                    <span
                      class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
                    >
                      Authentication
                    </span>
                    <div
                      class="bp3-form-group"
                      data-id="authType-2"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="authType"
                                placeholder="Search..."
                                style="padding-right: 0px;"
                                type="text"
                                value="Username and Password"
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                  icon="caret-down"
                                >
                                  <svg
                                    data-icon="caret-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      caret-down
                                    </desc>
                                    <path
                                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="username-3"
                  >
                    <label
                      class="bp3-label"
                      for="username"
                    >
                      Username
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="username"
                          type="text"
                          value="test"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="null-4"
                  >
                    <label
                      class="bp3-label"
                    >
                      Password
                    </label>
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          style="align-items: center; width: 100%;"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span>
                            testpass
                          </span>
                        </div>
                      </span>
                    </button>
                  </div>
                </div>
                <button
                  class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Save and Continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`StepWidget tests shows add artifact modal: Artifact Name Step  1`] = `
<div
  class="bp3-dialog modal bp3-dialog"
  style="width: 1000px; height: 580px; padding-bottom: 0px; position: relative;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    />
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <section
    class="wrapper"
  >
    <div
      class="StepWizard--main StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            1
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            CONNECTOR DETAILS
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            2
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            AUTHENTICATION
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            3
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            VERIFY CONNECTION
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            4
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            ARTIFACT SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
        >
          <div
            class="heading"
          >
            Overview
          </div>
          <div
            class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
          >
            <div
              class="OverlaySpinner--overlaySpinner"
            >
              <form
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="min-height: 460px;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                      >
                        <div
                          class="StyledProps--font StyledProps--main connectorFormNameElm"
                        >
                          <div
                            class="InputWithIdentifier--txtNameContainer"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                ID
                                :
                              </p>
                              <span
                                class="InputWithIdentifier--idInput"
                                contenteditable="true"
                              />
                              <span
                                class="bp3-icon bp3-icon-edit StyledProps--main"
                                icon="edit"
                                style="vertical-align: middle;"
                              >
                                <svg
                                  data-icon="edit"
                                  height="12"
                                  viewBox="0 0 16 16"
                                  width="12"
                                >
                                  <desc>
                                    edit
                                  </desc>
                                  <path
                                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="bp3-form-group"
                              data-id="name-0"
                            >
                              <label
                                class="bp3-label"
                                for="name"
                              >
                                Name
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="bp3-input-group"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="name"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                          style="justify-content: center;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                          >
                            + Description
                          </p>
                          <p
                            class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                          >
                            + Tags
                          </p>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main connectorFormElm"
                      >
                        
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span>
                          Save and Continue
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                        icon="chevron-right"
                      >
                        <svg
                          data-icon="chevron-right"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            chevron-right
                          </desc>
                          <path
                            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`StepWidget tests shows add manifests modal: Create Manifest modal 1`] = `
<div
  class="bp3-dialog modal bp3-dark"
  style="width: 1000px; min-height: 580px; padding-bottom: 0px; position: relative;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    />
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="StyledProps--font StyledProps--main optionsViewContainer"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-white"
      level="2"
      style="font-size: 30px;"
    >
      Specify your manifest file repository type
    </h2>
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-white StyledProps--margin-top-large StyledProps--margin-bottom-medium"
      level="3"
    >
      Start by selecting your repository type.
    </h3>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="optionsViewGrid"
      >
        <div
          class="bp3-card bp3-interactive bp3-elevation-0 Card--card"
          data-index="0"
          tabindex="0"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
            >
              <svg
                height="35"
                viewBox="0 0 14 14"
                width="35"
              >
                <path
                  d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                  fill="#326ce5"
                />
                <path
                  d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                  fill="#fff"
                  stroke="#fff"
                  stroke-width="0.25"
                />
              </svg>
            </span>
          </div>
          <section>
            K8s Manifest
          </section>
        </div>
        <div
          class="bp3-card bp3-interactive bp3-elevation-0 Card--card"
          data-index="1"
          tabindex="0"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
            >
              <svg
                height="35"
                viewBox="0 0 15 14"
                width="35"
              >
                <path
                  d="M4.64.866H3.214A2.352 2.352 0 00.862 3.217v1.427a2.352 2.352 0 002.352 2.351H4.64a2.352 2.352 0 002.352-2.351V3.217A2.352 2.352 0 004.64.866zm1.255 3.778c0 .691-.563 1.254-1.255 1.254H3.214A1.256 1.256 0 011.96 4.644V3.217c0-.691.562-1.254 1.254-1.254H4.64c.692 0 1.255.563 1.255 1.254v1.427zm5.8-3.778H10.27a2.352 2.352 0 00-2.351 2.351v1.427a2.352 2.352 0 002.351 2.351h1.427a2.352 2.352 0 002.351-2.351V3.217A2.352 2.352 0 0011.696.866zm1.255 3.778c0 .691-.563 1.254-1.254 1.254h-1.427a1.256 1.256 0 01-1.254-1.254V3.217c0-.691.563-1.254 1.254-1.254h1.427c.691 0 1.254.563 1.254 1.254v1.427zM4.64 7.773H3.214a2.352 2.352 0 00-2.352 2.351v1.427a2.352 2.352 0 002.352 2.352H4.64a2.352 2.352 0 002.352-2.352v-1.427A2.352 2.352 0 004.64 7.773zm1.255 3.778c0 .691-.563 1.254-1.255 1.254H3.214a1.256 1.256 0 01-1.254-1.254v-1.427c0-.691.562-1.254 1.254-1.254H4.64c.692 0 1.255.563 1.255 1.254v1.427zm8.294-1.984a.549.549 0 01-.549.549H8.466a.549.549 0 010-1.098h5.174a.55.55 0 01.549.549zm0 3.397a.549.549 0 01-.549.549H8.466a.549.549 0 110-1.098h5.174a.55.55 0 01.549.549z"
                  fill="#25A6F7"
                />
              </svg>
            </span>
          </div>
          <section>
            Values Override
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StepWidget tests shows add manifests modal: Git Server Step 1`] = `
<div
  class="bp3-dialog modal bp3-dialog"
  style="width: 1000px; min-height: 580px; padding-bottom: 0px; position: relative;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    />
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="exampleWizard"
  >
    <div
      class="StepWizard--main StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            1
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            SPECIFY MANIFEST SERVER
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            2
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            MANIFEST SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-small"
          style="height: 100%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-medium"
          >
            MANIFEST SOURCE
          </p>
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="formContainerStepOne"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
                style="align-items: center;"
              >
                <div>
                  GIT Server
                  <div
                    class="bp3-form-group"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        style="width: 400px;"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main container"
                              style="width: 372px;"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                <div
                                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                                  style="justify-content: space-between; width: 100%;"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main"
                                  >
                                    dockerAleks
                                  </p>
                                  <div
                                    class="rightStatus"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                      icon="full-circle"
                                    >
                                      <svg
                                        data-icon="full-circle"
                                        height="6"
                                        viewBox="0 0 16 16"
                                        width="6"
                                      >
                                        <desc>
                                          full-circle
                                        </desc>
                                        <path
                                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      class="Tag--main"
                                    >
                                      <span
                                        class="bp3-tag bp3-minimal tag"
                                      >
                                        <span
                                          class="bp3-text-overflow-ellipsis bp3-fill"
                                        >
                                          account
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </span>
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="MultiTypeInput--btn MultiTypeInput--FIXED"
                            >
                              <span
                                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="#009dff"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    New Manifest Server
                  </span>
                </button>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main bottomButtons"
              >
                <button
                  class="bp3-button StyledProps--font Button--button StyledProps--main"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Save and Continue
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
